--- a/sdk/tables/aztable/recordings/TestTableClient_Storage/TestSetEmptyAccessPolicy.yaml
+++ b/sdk/tables/aztable/recordings/TestTableClient_Storage/TestSetEmptyAccessPolicy.yaml
@@ -2,7 +2,7 @@
 version: 1
 interactions:
 - request:
-    body: '{"TableName":"gotablebcqrkewuxnzia"}'
+    body: '{"TableName":"gotablemp92a68btv51b"}'
     form: {}
     headers:
       Accept:
@@ -19,53 +19,49 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Fri, 02 Jul 2021 15:25:13 GMT
+      - Fri, 02 Jul 2021 16:11:04 GMT
       X-Ms-Version:
       - "2019-02-02"
     url: https://seankaneprim.table.core.windows.net/Tables
     method: POST
   response:
-    body: '{"odata.metadata":"https://seankaneprim.table.core.windows.net/$metadata#Tables/@Element","TableName":"gotablebcqrkewuxnzia"}'
+    body: '{"odata.metadata":"https://seankaneprim.table.core.windows.net/$metadata#Tables/@Element","TableName":"gotablemp92a68btv51b"}'
     headers:
       Cache-Control:
       - no-cache
       Content-Type:
       - application/json;odata=minimalmetadata;streaming=true;charset=utf-8
       Date:
-      - Fri, 02 Jul 2021 15:25:13 GMT
+      - Fri, 02 Jul 2021 16:11:04 GMT
       Location:
-      - https://seankaneprim.table.core.windows.net/Tables('gotablebcqrkewuxnzia')
+      - https://seankaneprim.table.core.windows.net/Tables('gotablemp92a68btv51b')
       Server:
       - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - 8bfd0f8b-1002-0092-6456-6f6ca3000000
+      - 6acd05cd-4002-006b-295c-6f6f81000000
       X-Ms-Version:
       - "2019-02-02"
     status: 201 Created
     code: 201
     duration: ""
 - request:
-    body: <SignedIdentifiers></SignedIdentifiers>
+    body: ""
     form: {}
     headers:
       Accept:
       - application/xml
       Authorization:
       - sanitized
-      Content-Length:
-      - "39"
-      Content-Type:
-      - application/xml
       User-Agent:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Fri, 02 Jul 2021 15:25:13 GMT
+      - Fri, 02 Jul 2021 16:11:04 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://seankaneprim.table.core.windows.net/gotablebcqrkewuxnzia?comp=acl
+    url: https://seankaneprim.table.core.windows.net/gotablemp92a68btv51b?comp=acl
     method: PUT
   response:
     body: ""
@@ -73,11 +69,11 @@ interactions:
       Content-Length:
       - "0"
       Date:
-      - Fri, 02 Jul 2021 15:25:13 GMT
+      - Fri, 02 Jul 2021 16:11:04 GMT
       Server:
       - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
       X-Ms-Request-Id:
-      - 8bfd100a-1002-0092-5d56-6f6ca3000000
+      - 6acd0623-4002-006b-7c5c-6f6f81000000
       X-Ms-Version:
       - "2019-02-02"
     status: 204 No Content
@@ -95,10 +91,10 @@ interactions:
       - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Fri, 02 Jul 2021 15:25:13 GMT
+      - Fri, 02 Jul 2021 16:11:05 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://seankaneprim.table.core.windows.net/Tables('gotablebcqrkewuxnzia')
+    url: https://seankaneprim.table.core.windows.net/Tables('gotablemp92a68btv51b')
     method: DELETE
   response:
     body: ""
@@ -108,13 +104,13 @@ interactions:
       Content-Length:
       - "0"
       Date:
-      - Fri, 02 Jul 2021 15:25:14 GMT
+      - Fri, 02 Jul 2021 16:11:04 GMT
       Server:
       - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - 8bfd1052-1002-0092-2556-6f6ca3000000
+      - 6acd066d-4002-006b-405c-6f6f81000000
       X-Ms-Version:
       - "2019-02-02"
     status: 204 No Content
